terraform/aws/alb.tf
resource "aws_lb" "main" {

  name = "${local.project_prefix}-alb"

  internal = false

  load_balancer_type = "application"

  security_groups = [

    aws_security_group.alb_sg.id

  ]

  subnets = [

    aws_subnet.public["public_a"].id,
    aws_subnet.public["public_b"].id

  ]

  enable_deletion_protection = false

  tags = {

    Name = "${local.project_prefix}-alb"

  }

}

resource "aws_lb_target_group" "jenkins" {

  name = "mc-jenkins-tg"

  port = 8080

  protocol = "HTTP"

  vpc_id = aws_vpc.main.id

  target_type = "instance"

  health_check {

    enabled = true

    path = "/login"

    protocol = "HTTP"

    port = "8080"

    healthy_threshold = 2

    unhealthy_threshold = 3

    timeout = 5

    interval = 30

    matcher = "200-399"

  }

  tags = {

    Name = "${local.project_prefix}-jenkins-tg"

  }

}

resource "aws_lb_listener" "http" {

  load_balancer_arn = aws_lb.main.arn

  port = 80

  protocol = "HTTP"

  default_action {

    type = "forward"

    target_group_arn = aws_lb_target_group.jenkins.arn

  }

}
